# residfp

./: Cargo.toml  README.md
benches/: sampler_bench.rs  sid_bench.rs
src/: dac.rs  envelope.rs  external_filter.rs  filter.rs  lib.rs  sampler.rs  sid.rs  spline.rs  synth.rs  voice.rs  wave.rs
src/filter_ekv/: config.rs  integrator.rs  mod.rs  opamp.rs
src/sampler/: fir.rs  mod.rs  soft_clip.rs  two_pass.rs
tests/: envelope_edge_cases_test.rs  envelope_test.rs  external_filter_test.rs  filter_test.rs  sampler_test.rs  sid_test.rs  spline_edge_cases_test.rs  spline_test.rs  two_pass_resampler_test.rs  wave_edge_cases_test.rs  wave_test.rs
tests/data/: mod.rs  sid_output.rs  spline_output.rs  wave_delta_output.rs  wave_output.rs
