[package]
name = "residfp"
version = "1.1.1"
edition = "2018"
authors = ["Sebastian Jastrzebski <sebby2k@gmail.com>"]
description = "Port of libresidfp, a MOS6581/8580 SID emulator engine, to Rust"
license = "GPL-3.0+"
repository = "https://github.com/binaryfields/resid-rs"
readme = "README.md"
keywords = ["c64", "commodore", "emulator", "resid", "residfp", "sid"]
categories = ["emulators"]

[lib]
name = "residfp"

[features]
default = ["std"]
std = ["alloc"]
alloc = []
# Physics-based EKV transistor model for accurate 6581 filter emulation (~400KB tables)
ekv-filter = ["alloc"]

[dependencies]
bit_field = "0.10"
libm = { version = "0.2.0", optional = true }
wide = "1.1"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "main"
harness = false
